--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         * {
             box-sizing: border-box;
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         body {
@@ -30,21 +30,81 @@
             color: var(--text);
             font-family: 'Rajdhani', sans-serif;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             min-height: 100vh;
             margin: 0;
             padding: 20px;
+            overflow-x: hidden;
         }
 
+        /* --- BRANDING LOGO & ANIMATION --- */
+        .brand-container {
+            position: absolute;
+            top: 30px;
+            left: 40px;
+            z-index: 100;
+            text-align: left;
+        }
+
+        .brand-logo {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.8rem;
+            font-weight: 800;
+            color: #fff;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            position: relative;
+            display: inline-block;
+            text-shadow: 0 0 10px var(--primary);
+        }
+
+        .brand-logo span {
+            color: var(--primary);
+            display: block;
+            font-size: 0.7rem;
+            letter-spacing: 8px;
+            margin-top: -5px;
+            opacity: 0.8;
+        }
+
+        /* Efek Glitch Lembut */
+        .brand-logo:hover {
+            animation: glitch 0.3s infinite;
+        }
+
+        @keyframes glitch {
+            0% {
+                transform: translate(0);
+                text-shadow: -2px 0 var(--danger), 2px 0 var(--primary);
+            }
+
+            25% {
+                transform: translate(-2px, 2px);
+            }
+
+            50% {
+                transform: translate(2px, -2px);
+            }
+
+            100% {
+                transform: translate(0);
+            }
+        }
+
+        /* --- CARD STYLING --- */
         .card {
             background: var(--card-bg);
-            backdrop-filter: blur(15px);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 30px;
-            border-radius: 20px;
+            padding: 40px;
+            border-radius: 24px;
             width: 100%;
             max-width: 1000px;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            margin-top: 80px;
+            /* Jarak untuk logo atas */
         }
 
         h2,
@@ -53,20 +113,23 @@
             letter-spacing: 2px;
             text-transform: uppercase;
             margin-top: 0;
+            background: linear-gradient(to right, #fff, var(--primary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .hidden {
             display: none !important;
         }
 
-        /* Input Styling */
+        /* --- INPUTS --- */
         input,
         select {
             width: 100%;
-            padding: 14px;
-            margin: 10px 0;
-            background: rgba(0, 0, 0, 0.3);
-            border: 1px solid #333;
+            padding: 15px;
+            margin: 12px 0;
+            background: rgba(0, 0, 0, 0.4);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             color: white;
             border-radius: 12px;
             font-size: 1rem;
@@ -74,37 +137,37 @@
 
         input:focus {
             border-color: var(--primary);
-            box-shadow: 0 0 10px rgba(0, 229, 255, 0.3);
+            box-shadow: 0 0 15px rgba(0, 229, 255, 0.2);
             outline: none;
+            background: rgba(0, 0, 0, 0.6);
         }
 
-        /* Button Styling */
+        /* --- BUTTONS --- */
         .btn-main {
             width: 100%;
-            padding: 16px;
-            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            padding: 18px;
+            background: linear-gradient(45deg, var(--secondary), var(--primary));
             border: none;
             color: white;
-            font-weight: bold;
-            border-radius: 12px;
+            font-weight: 800;
+            border-radius: 14px;
             cursor: pointer;
             text-transform: uppercase;
             font-family: 'Orbitron', sans-serif;
-            font-size: 0.9rem;
-            box-shadow: 0 5px 15px rgba(0, 229, 255, 0.2);
+            box-shadow: 0 10px 20px rgba(112, 0, 255, 0.3);
         }
 
         .btn-main:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(0, 229, 255, 0.4);
+            transform: translateY(-3px) scale(1.01);
+            box-shadow: 0 15px 30px rgba(0, 229, 255, 0.4);
         }
 
         .btn-sub {
-            background: transparent;
+            background: rgba(0, 229, 255, 0.05);
             border: 1px solid var(--primary);
             color: var(--primary);
-            padding: 10px;
-            border-radius: 8px;
+            padding: 12px;
+            border-radius: 10px;
             cursor: pointer;
             width: 100%;
             margin-top: 10px;
@@ -112,158 +175,70 @@
         }
 
         .btn-sub:hover {
-            background: rgba(0, 229, 255, 0.1);
+            background: var(--primary);
+            color: #000;
         }
 
-        .btn-danger {
-            background: rgba(255, 68, 68, 0.1);
-            border: 1px solid var(--danger);
-            color: var(--danger);
-            padding: 5px 12px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 0.8rem;
-        }
-
-        .btn-logout {
-            background: var(--danger);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 10px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        /* Layout Grid */
-        .header-dashboard {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.05);
-            padding-bottom: 20px;
-            margin-bottom: 30px;
-        }
-
+        /* --- DASHBOARD LAYOUT --- */
         .grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 30px;
         }
 
-        @media (max-width: 768px) {
-            .grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
         .section-box {
-            background: rgba(255, 255, 255, 0.03);
-            padding: 20px;
-            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.02);
+            padding: 25px;
+            border-radius: 18px;
             border: 1px solid rgba(255, 255, 255, 0.05);
         }
 
-        /* Code Display */
         .code-box {
             background: #000;
-            padding: 25px;
+            padding: 30px;
             border-radius: 15px;
-            border: 2px dashed var(--primary);
+            border: 2px solid var(--primary);
             color: var(--primary);
-            font-size: 2rem;
-            letter-spacing: 10px;
+            font-size: 2.2rem;
+            text-align: center;
+            letter-spacing: 12px;
             margin: 20px 0;
             font-family: 'Orbitron', sans-serif;
-            text-shadow: 0 0 10px var(--primary);
+            box-shadow: inset 0 0 20px rgba(0, 229, 255, 0.2);
         }
 
-        /* Table Styling */
-        .scroll-table {
-            max-height: 300px;
-            overflow-y: auto;
-            border-radius: 10px;
-            margin-top: 15px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: separate;
-            border-spacing: 0 8px;
-        }
-
-        th {
-            color: var(--primary);
-            padding: 12px;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-        }
-
-        td {
-            background: rgba(255, 255, 255, 0.02);
-            padding: 12px;
-        }
-
-        td:first-child {
-            border-radius: 10px 0 0 10px;
-        }
-
-        td:last-child {
-            border-radius: 0 10px 10px 0;
-        }
-
-        .status-badge {
-            padding: 4px 10px;
-            border-radius: 20px;
-            font-size: 0.7rem;
-            background: rgba(0, 255, 136, 0.1);
-            color: var(--success);
-            border: 1px solid var(--success);
-        }
-
-        .warning-text {
-            background: rgba(255, 68, 68, 0.1);
-            border-left: 4px solid var(--danger);
-            padding: 12px;
-            font-size: 0.8rem;
-            margin-bottom: 20px;
-            border-radius: 4px;
-        }
-
-        /* Tambahkan/Update CSS ini */
-        .brand-container {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            z-index: 100;
-        }
-
-        .brand-logo {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--primary);
-            text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary);
-            letter-spacing: 2px;
-            text-transform: uppercase;
-        }
-
-        .brand-logo span {
-            color: #fff;
-            font-size: 0.8rem;
-            display: block;
-            letter-spacing: 5px;
-            margin-top: -5px;
-            opacity: 0.7;
-        }
-
+        /* --- RESPONSIVE MOBILE --- */
         @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+
             .brand-container {
                 position: relative;
                 top: 0;
                 left: 0;
                 text-align: center;
-                margin-bottom: 20px;
+                margin-bottom: 30px;
+                width: 100%;
+            }
+
+            .brand-logo {
+                font-size: 2rem;
+            }
+
+            .card {
+                margin-top: 10px;
+                padding: 25px;
+            }
+
+            .grid {
+                grid-template-columns: 1fr;
+            }
+
+            .header-dashboard {
+                flex-direction: column;
+                gap: 20px;
+                text-align: center;
             }
         }
     </style>
